--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,20 @@
 
     <!-- Menu Items -->
     <string name="action_settings">Settings</string>
+    <string name="pref_location_label">Country</string>
+
+    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_location_key" translatable="false">location</string>
+
+    <!-- Default country code for location preference [CHAR LIMIT=NONE] -->
+    <string name="pref_location_default" translatable="false">US</string>
+
+    <!-- Strings related to Notification Enabled preference -->
+    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
+    <string name="pref_enable_notifications_label">Play Notifications</string>
+    <string name="pref_enable_notifications_true">Enabled</string>
+    <string name="pref_enable_notifications_false">Not Enabled</string>
+    <string name="pref_enable_notifications_default" translatable="false">true</string>
 
     <!-- Generic constants -->
     <string name="artist_hint">Search for your Favorite Music Artist!</string>
@@ -15,7 +29,4 @@
 
     <!-- Error messages -->
     <string name="no_results">No artist found. Please refine your search.</string>
-    <string name="error_generic">Uh-oh! Something went wrong or we lost connectivity.</string>
-    <string name="error_connectivity">Issues with connectivity. Try again.</string>
-
 </resources>
