--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,14 @@
     <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_location_key" translatable="false">location</string>
 
-    <!-- Default country code for location preference [CHAR LIMIT=NONE] -->
+    <!-- Labels for location preference [CHAR LIMIT=25] -->
+    <string name="pref_location_label_us">United States</string>
+    <string name="pref_location_label_ca">Canada</string>
+
+    <!-- Country code for location preference [CHAR LIMIT=NONE] -->
     <string name="pref_location_default" translatable="false">US</string>
+    <string name="pref_location_us" translatable="false">US</string>
+    <string name="pref_location_ca" translatable="false">CA</string>
 
     <!-- Strings related to Notification Enabled preference -->
     <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
